added img-fluid on the loader for formatting on mobile

--- a/BMR Calc - JS/index.html
+++ b/BMR Calc - JS/index.html
@@ -96,7 +96,7 @@
                         </form>
                         <!--Loader-->
                         <div id="loading">
-                            <img src="./img/loading.gif" alt="">
+                            <img src="./img/loading.gif" class="img-fluid" alt="">
                         </div>
                         
                         <!--Results-->
