--- a/BMR Calc - JS/index.html
+++ b/BMR Calc - JS/index.html
@@ -57,7 +57,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-text">Weight (ibs)</span>
-                                    <input type="number" class="form-control" id="weight" placeholder="Enter weight..." min="50" max="500" required>
+                                    <input type="number" class="form-control" id="weight" placeholder="Enter weight..." min="50" max="500" step="0.1" required>
                                 </div>
                             </div>
                             <!--Height-->
